Added: footer component

--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -2631,6 +2631,70 @@
 
         }
 
+
+
+
+
+
+
+        #_loading_submit_btn_{
+            cursor: not-allowed;
+            margin-bottom: 1rem;
+            background-color: $H_GRAY;
+            color: $WHITE;
+            padding: 0.64rem 1rem;
+            border-radius: 5px;
+            
+
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+            // #############################################################
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         // FORM MESSAGE ERROR
         ._form_message_error_{
             margin: 0;
