--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -3276,7 +3276,7 @@
         }
 
 
-
+ 
 
 
 
@@ -4289,3 +4289,51 @@
 
 
 // Copyright
+._copyright_component_wrapper{
+    padding: 1rem;
+    background-color: $H_BLACK;
+
+    p{
+        margin: 0;
+        font-size: 1rem;
+        text-align: center;
+        color: $H_GRAY;
+
+
+        @media only screen and (min-width: 2501px){
+            
+            font-size: 2rem;
+        }
+
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+           
+            font-size: 1.75rem;
+        }
+
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+            
+           font-size: 1.5rem;
+        }
+
+        @media only screen and (min-width: 1501px) and (max-width: 1800px){
+           
+           font-size: 1.25rem;
+        }
+
+        @media only screen and (min-width: 1400px) and (max-width: 1500px) {
+          
+           font-size: 1.1rem;
+        }
+
+
+
+        // ################################################
+
+
+        @media only screen and (max-width: 767px) { 
+            font-size: 0.8rem;
+        }
+
+
+    }
+}
