--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -2115,7 +2115,7 @@
     width: 100vw;
     background-color: $WHITE;
     // min-height: 100vh;
-  
+    // position: relative;
 
 
 
@@ -2352,7 +2352,7 @@
         font-size: 1.75rem;
         font-family: $HEADER_FONT;
         margin-bottom: 1rem;
-        font-weight: 700;
+        // font-weight: 700;
 
 
 
@@ -2388,36 +2388,143 @@
     }
 
 
+
+
+
+
+
+
+
+
+
     // FORM
     form{
-        label, input, textarea, button{
-            all: unset;
-            display: block;
+        // background-color: red;
+        display: flex;
+        justify-content: center;
+
+
+
+      
+        @media only screen and (max-width: 576px) { 
+          display: block;
         }
 
 
 
 
+
+       #_contact_div_inside_form_{
+        // background-color: green;
+
+
+
+
+
+
+        ._contact_other_accounts_p_tag_{
+            margin: 0;
+            width: 450px;
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            color: $BLACK;
+            // background-color: red;
+
+            @media only screen and (max-width: 576px){
+                margin: 0 auto;
+                width: 350px;
+                margin-top: 1.25rem;
+            }
+
+
+            @media only screen and (max-width: 425px){
+                width: 300px;
+            }
+
+
+            @media only screen and (max-width: 380px){
+                width: 250px;
+            }
+
+
+        }
+
+    ._contact_anchor_tags_wrapper_{
+
+
+        @media only screen and (max-width: 576px){
+            margin-top: 1.25rem;
+          text-align: center;
+        }
+
+
+        ._contact_anchor_tags_{
+            display: inline-block;
+            margin-right: 1rem;
+           font-size: 1rem;
+        }
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        label, input, textarea, button{
+            all: unset;
+            display: block;
+
+            // border: 3px solid green;
+        }
+
+
+    
+
+
         input, textarea{
-            max-width: 450px;
-            width: 100%;
+            // max-width: 450px;
+            // width: 100%;
+
+            width: 450px;
+
+
+       
 
 
 
             @media only screen and (min-width: 2501px){
-                max-width: 650px;
+                width: 700px;
             }
     
             @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-                max-width: 600px;
+                width: 650px;
             }
     
             @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-                max-width: 550px;
+                width: 600px;
             }
     
             @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
-               max-width: 550px;
+               width: 500px;
             }
 
 
@@ -2426,16 +2533,30 @@
 
 
             @media only screen and (max-width: 1199px) {
-                max-width: 400px;
+                width: 400px;
              }
 
 
              @media only screen and (max-width: 991px){
-               width: 700px;
+               width: 450px;
              }
 
-             @media only screen and (max-width: 510px){
+
+
+             @media only screen and (max-width: 630px){
+                width: 400px;
+             }
+
+
+             @media only screen and (max-width: 576px){
                 width: 300px;
+
+
+
+                margin: 0 auto;
+
+
+
              }
 
              @media only screen and (max-width: 380px){
@@ -2475,6 +2596,38 @@
 
             // #############################################################
             
+            @media only screen and (max-width: 576px){
+                margin-left: 7rem;
+            }
+
+
+            @media only screen and (max-width: 550px){
+                margin-left: 6rem;
+            }
+
+            @media only screen and (max-width: 520px){
+                margin-left: 5rem;
+            }
+
+
+            @media only screen and (max-width: 480px){
+                margin-left: 3.5rem;
+            }
+
+
+            @media only screen and (max-width: 440px){
+                margin-left: 2rem;
+            }
+
+
+            @media only screen and (max-width: 340px){
+                margin-left: 1rem;
+            }
+
+
+            @media only screen and (max-width: 321px){
+                margin-left: 0.64rem;
+            }
 
 
         }
@@ -2590,12 +2743,14 @@
         }
 
         button{
-            margin-bottom: 1rem;
+            cursor: pointer;
+            margin-bottom: 2rem;
             background-color: $BLACK;
             color: $WHITE;
             padding: 0.64rem 1rem;
             border-radius: 5px;
             transition: all 0.2s ease-in-out;
+            font-size: 1rem;
 
 
             &:hover{
@@ -2626,7 +2781,40 @@
 
 
 
+            @media only screen and (max-width: 576px){
+                margin-left: 7rem;
+             }
 
+
+             @media only screen and (max-width: 550px){
+                margin-left: 6rem;
+            }
+
+            @media only screen and (max-width: 520px){
+                margin-left: 5rem;
+            }
+
+            @media only screen and (max-width: 480px){
+                margin-left: 3.5rem;
+            }
+
+
+
+            
+            @media only screen and (max-width: 440px){
+                margin-left: 2rem;
+            }
+
+
+
+            @media only screen and (max-width: 340px){
+                margin-left: 1rem;
+            }
+
+
+            @media only screen and (max-width: 321px){
+                margin-left: 0.64rem;
+            }
 
 
         }
@@ -2637,13 +2825,33 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         #_loading_submit_btn_{
             cursor: not-allowed;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             background-color: $H_GRAY;
             color: $WHITE;
             padding: 0.64rem 1rem;
             border-radius: 5px;
+            font-size: 1rem;
             
 
 
@@ -2667,6 +2875,14 @@
 
 
             // #############################################################
+
+
+            
+            @media only screen and (max-width: 576px){
+                margin: 0 auto;
+             }
+
+
         }
 
 
@@ -2732,6 +2948,8 @@
         }
         // END
     }
+    }
+
     // END
 
 
@@ -4290,7 +4508,7 @@
 
 // Copyright
 ._copyright_component_wrapper{
-    padding: 1rem;
+    padding: 2rem 1rem;
     background-color: $H_BLACK;
 
     p{
