Added: media query to nav logo

--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -93,7 +93,7 @@
 
     ._navigation_hamburger_menu_{
         display: none;
-        font-size: 3rem;
+        font-size: 2.5rem;
         color: $BLACK;
 
 
@@ -150,11 +150,14 @@
 
 
         @media only screen and (max-width: 576px) { 
-            font-size: 2.75rem;
-           
+            font-size: 2.75rem; 
         }
 
 
+        @media only screen and (max-width: 425px) { 
+            // margin: 0;
+            font-size: 2.25rem; 
+        }
 
 
 
@@ -2430,6 +2433,46 @@
             color: $BLACK;
             // background-color: red;
 
+
+
+            @media only screen and (min-width: 2501px){
+
+                width: 700px;
+
+
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+
+                width: 650px;
+
+
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+
+                width: 650px;
+
+
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+
+                width: 520px;
+
+
+                font-size: 1.25rem;
+            }
+
+
+
+
+
+            // ##############################################################
+
             @media only screen and (max-width: 576px){
                 margin: 0 auto;
                 width: 350px;
@@ -2459,6 +2502,34 @@
 
 
         ._contact_anchor_tags_{
+
+
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+
+
+
+
+            // ##############################################################
+
             display: inline-block;
             margin-right: 1rem;
            font-size: 1rem;
