--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -148,6 +148,11 @@
         // ############################################################################
 
 
+        @media only screen and (max-width: 991px){
+            margin: 0;
+        }
+
+
 
         @media only screen and (max-width: 576px) { 
             font-size: 2.75rem; 
@@ -155,7 +160,7 @@
 
 
         @media only screen and (max-width: 425px) { 
-            // margin: 0;
+           
             font-size: 2.25rem; 
         }
 
