Added: project links to footer component

--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -3697,6 +3697,24 @@
 #_footer_row_wrapper_{
 #_footer_cols_wrapper_{
 
+    // &:nth-child(1){
+      
+    //     //  background-color: red;
+    //  }
+
+
+    // &:nth-child(3){
+    //    display: grid;
+    //    place-content: center;
+    //     // background-color: red;
+    // }
+
+    // background-color: red;
+    // text-align: center;
+
+
+
+
     ._footer_logo_icon_{ 
         margin: 0;
         font-family: "Agent", sans-serif;
